# HypoArgus-Writer

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  PRD.md  README.md  draf_prf.md  hypotheses-prompt.md  out-article-r1.md  out.md  pyproject.toml
docs/: api.md  architecture-review-20260718.html  deployment.md  development.md  java-integration.md  prd-archive.md  search-agent-research-notes.md
docs/adr/: 0001-subagent-real-impl-constraints.md  0002-rewriter-loop-migration.md  0003-word-count-control.md  0004-postfix-recheck-and-revise-fix-merge.md  0005-multi-doc-type-validation.md  0006-chapter-reviewer-and-sectioned-revision-note.md  0007-revise-review-first-and-unified-revision-note.md  0008-document-reviewer-two-level-review.md  0009-hitl-directive-locating.md
docs/agents/: domain.md  issue-tracker.md
docs/diagnostics/: 2026-07-21-t0-prd41-precheck.md
docs_templates/: index.md  人才培养方案总结（汇报）模版.md  学院级多专业培养方案模版.md  本科职业教育人才培养方案模版.md  调研报告模版.md  高职专科人才培养方案模版.md
scripts/: cleanup_mock_tasks.py  demo.py  demo_task.baseline.json  parse_archive_timings.py  probe_llm_latency.py  probe_search_agent.py  rewriter_debug.py  rewriter_task.sample.json  verify_article.py
src/: app.py  assembler_config.py  bibliography.py  citation_reconciler.py  citation_validator.py  context_assembler.py  env_config.py  framework_config.py  framework_orchestrator.py  graph.py  graph_event_stream.py  human_review_gate.py  llm_client.py  llm_config.py  llm_json.py  observability.py  reference_orchestrator.py  state.py  subagents.py  task_service.py  writing_orchestrator.py
src/agents/: __init__.py  citation_policy.py  concurrency.py  contracts.py  search_agent.py
src/assembly/: __init__.py  assembler_config.py  context_assembler.py
src/domain/: __init__.py  bibliography.py  chapter_numbering_validator.py  citation_reconciler.py  doc_types.py  events.py  (+5 more)
tests/: conftest.py  llm_response_plans.py  test_api_e2e.py  test_bibliography.py  test_checkpoint_serde.py  test_citation_reconciler.py  test_citation_validator.py  test_context_assembler.py  test_event_broker.py  test_framework_config.py  test_framework_orchestrator.py  test_graph_e2e.py  test_graph_event_stream.py  test_human_review_gate.py  test_llm_client.py  test_llm_config.py  test_observability.py  test_reference_orchestrator.py  test_reviewer_injection.py  test_subagents.py  test_template_skeleton.py  test_ulmen_serde_experiment.py  test_writing_orchestrator.py
(+184 files in other folders)
