[project]
name = "hypoargus-writer"
version = "0.1.0"
description = "纯 LangGraph 单一技术栈的工业级结构化写作后端服务"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "openai>=1.60",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "langfuse>=4.14,<5",
    "pyyaml>=6.0.3",
    # 子智能体契约 TypedDict 取 typing_extensions 版本（Pydantic 3.12 前的要求）
    "typing-extensions>=4.12",
    # search_agent 检索引擎（自源项目一次性 fork）运行时依赖
    "langchain-core>=1.3",
    "httpx[http2]>=0.27",
    "sqlalchemy>=2.0,<3",
    "pymysql>=1.1,<2",
    "pypdf>=4",
    "sse-starlette>=3.4.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "mypy>=1.13",
    "types-pyyaml>=6.0.12.20260518",
]
# ulmen 压缩 serde 实验专用：实验结论为「不启用」（见 tests/e2e/test_ulmen_serde_experiment.py），
# 仅为复现实验保留，不进入运行时依赖。
experiment = [
    "ulmen-langgraph>=0.1.0",
]

# 服务型项目，不打包发布；源码按依赖层级分包于 src/，运行与测试均通过 pythonpath 引入。
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "real_e2e: 门控真实链路 E2E（真实 LLM 与三条检索通道，需 HYPOARGUS_REAL_E2E=1 且凭据齐备）",
]

[tool.mypy]
mypy_path = "src"
python_version = "3.11"
check_untyped_defs = true

# search_agent 为一次性 fork 的检索引擎，拷入初期整体豁免类型检查，后续随改造逐步收紧。
[[tool.mypy.overrides]]
module = "search_agent.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pymysql.*"
ignore_missing_imports = true
